# portico

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  summary.html
demo/: README.md  app.py  requirements.txt
docs/: brand-specs.md  product-specs.md
src/arqii/: analyzer.py  cache.py  cli.py  schema.py  summarize.py
src/arqii/loaders/: base.py  dir.py  file.py  repo.py  text.py  url.py
src/arqii/providers/: base.py  claude.py  gemini.py  openai.py
src/arqii/render/: __init__.py  apex.py  base.py  color.py
src/arqii/render/styles/: default.py
src/portico/: analyzer.py  cache.py  cli.py  config.py  schema.py  summarize.py
src/portico/loaders/: dir.py  file.py  repo.py  text.py  url.py
src/portico/providers/: claude.py  gemini.py  openai.py
src/portico/render/: __init__.py  apex.py  base.py  color.py
src/portico/render/styles/: default.py
tests/: test_analyzer.py  test_apex.py  test_cache.py  test_cli.py  test_loaders_basic.py  test_loaders_repo.py  test_loaders_url.py  test_render.py  test_schema.py  test_summarize.py
tests/eval/: README.md  judge.py  report.py  run_eval.py
tests/eval/gold/: README.md  template.json.example
tests/eval/gold/academic_paper/: 01_attention_sparsity.json
tests/eval/gold/adversarial/: 01_recipe_tomato_pasta.json  02_shopping_list.json  03_random_words.json  04_two_words.json
tests/eval/gold/business_plan/: 01_atrium_seed.json
tests/eval/gold/codebase/: 01_repo_tree.json
tests/eval/gold/dataset/: 01_citizens_air_quality.json
tests/eval/gold/essay/: 01_trust_at_scale.json  02_dynamic_parking.json
tests/eval/gold/fiction/: 01_lighthouse.json
tests/eval/gold/legal/: 01_nda_clause.json
tests/eval/gold/news/: 01_grid_battery.json
tests/eval/gold/poetry/: 01_morning_kitchen.json
tests/eval/gold/readme/: 01_httpx.json
tests/eval/gold/rfc/: 01_short_uri_scheme.json
tests/eval/gold/slide_deck/: 01_q3_review.json
tests/eval/gold/source_file/: 01_parse_config.json
tests/eval/gold/transcript/: 01_scaling_thread.json
tests/eval/inputs/: README.md
tests/eval/inputs/academic_paper/: 01_attention_sparsity.txt
tests/eval/inputs/adversarial/: 01_recipe_tomato_pasta.txt  03_random_words.txt
tests/eval/inputs/business_plan/: 01_atrium_seed.txt
tests/eval/smoke/: test_smoke.py
tests/fixtures/expected/: codebase_3pillars.txt  codebase_3pillars_verbose.txt  essay_2pillars.txt  flat_list_forced.txt  gibberish_not_applicable.txt  hello_world.txt  long_labels_4pillars.txt  paper_5pillars.txt  survey_9pillars_stretched.txt  treatise_7pillars.txt
tests/fixtures/json/: codebase_3pillars.json  essay_2pillars.json  flat_list_forced.json  gibberish_not_applicable.json  hello_world.json  long_labels_4pillars.json  paper_5pillars.json  survey_9pillars_stretched.json  treatise_7pillars.json
(+14 files in other folders)
