[project]
name = "portico-cli"
version = "0.1.4"
description = "Render any input as a portico – a three-layer ASCII visualization."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Tomás Ravalli", email = "tomravalli@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["ascii", "ascii-art", "visualization", "cli", "llm", "claude", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.100.0",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "trafilatura>=2.0.0",
]

[project.scripts]
portico = "portico.cli:main"

[project.urls]
Homepage = "https://github.com/0trm/portico"
Repository = "https://github.com/0trm/portico"
Issues = "https://github.com/0trm/portico/issues"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "portico"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
    "pyright>=1.1.380",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that hit a real LLM provider or network (deselect with '-m \"not live\"')",
]
